<resources>
    <string name="app_name">station_owner</string>
    <string name="back">Back</string>
    <string name="login_title">Station Owner Login</string>
    <string name="lg_ph_username">User Name</string>
    <string name="lg_ph_password">Password</string>
    <string name="lg_btn">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_here"> Register Here</string>

    <string name="register_title">Station Owner Registration</string>
    <string name="register_owner_nic_ph">Station owner\'s NIC</string>
    <string name="register_station_id_ph">Station Id</string>
    <string name="register_location_ph">Station location</string>
    <string name="register_owner_username_ph">Username</string>
    <string name="register_owner_password_ph">Password</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_fuel_status">FuelStatusActivity</string>
    <string name="action_settings">Settings</string>


    <string name="bottom_nav_item1">Fuel Status</string>
    <string name="bottom_nav_item2">Fuel Types</string>
    <string name="fuel_status_title">Manage Fuel Status</string>
    <string name="fuel_type_title">Manage Fuel Types</string>
    <string name="title_activity_profile_btn">ProfileBtnActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="arrival">Arrival</string>
    <string name="arrived_btn">Arrived</string>
    <string name="finished">Finished</string>
    <string name="finished_btn">Finished</string>

    <string name="profile_title">Your Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>