<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <Button
        android:id="@+id/back_btn"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        android:text="@string/back"
        android:layout_height="wrap_content"

        />
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="35dp"
        android:textColor="@color/orange"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/owner_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_owner_name_ph"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/register_title">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/station_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_station_id_ph"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/owner_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/station_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_location_ph"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/station_id">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_owner_username_ph"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/station_location">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        android:hint="@string/register_owner_password_ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/register_username"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/register_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        />

    </RelativeLayout>
</ScrollView >